--- a/index.html
+++ b/index.html
@@ -13,12 +13,35 @@
 </head>
 <body>
 
-    <h1><i class="fa-solid fa-music"></i> Heading</h1>
-    <p>Paragraph</p>
+    <!-- Bootstrap Navbar -->
+        <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"><h2>Verity-Belle Soprano</h2></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#about">About</a>
+              </li>              
+              <li class="nav-item">
+                <a class="nav-link" href="videos.html">Videos</a>
+              </li>
+              <li class="nav-item">
+                <a class="btn ms-lg-3 btn-primary" href="#contact">Enquire now</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    </body>
 
     <!-- Font Awesome Kit -->
     <script src="https://kit.fontawesome.com/853b219d72.js" crossorigin="anonymous"></script>
