--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Bootstrap Navbar -->
-        <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
+        <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><h2>Verity-Belle Soprano</h2></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
