Added custom button styles and restyled header section of index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="videos.html">Videos</a>
             </li>
             <li class="nav-item">
-              <a class="btn ms-lg-3 btn-primary" href="#contact">Enquire now</a>
+              <a class="btn ms-lg-3 custom-button-filled" href="#contact">Enquire now</a>
             </li>
           </ul>
         </div>
@@ -44,12 +44,16 @@
   <header>
     <div id="intro" class="container section">
       <div class="row">
-        <div class="col-12 col-xl-6">
-          <h1>Singing Lessons</h1>
-          <p class="my-4">Verity-Belle is a soprano singer, teacher and music practitioner from the market town of Cowbridge in South Wales. She trained at The Royal Welsh College of Music and Drama, graduating with 1st Class Honours on the BMus programme and later, MMus Music Performance, with Distinction, in 2021.</p>
-        </div>
-        <div class="col-12 col-xl-6">
+        <div class="col-12 col-xl-6">          
           <img src="assets/images/verity-10.webp" alt="Black and white portrait of Verity-Belle" class="img-fluid">
+        </div>
+        <div class="col-12 col-xl-6"> 
+          <h1>Welcome</h1>
+          <p class="lead">Singing Teacher Music Practitioner</p>        
+          <p class="my-4">Verity-Belle is a soprano singer, teacher and music practitioner from the market town of Cowbridge in South Wales. She trained at The Royal Welsh College of Music and Drama, graduating with 1st Class Honours on the BMus programme and later, MMus Music Performance, with Distinction, in 2021.</p>
+          <div class="d-flex justify-content-center"> 
+            <a class="btn custom-button-outline" href="#contact">Enquire now</a>
+          </div>        
         </div>
       </div>
     </div>
