Added heading to video page and added global styles

--- a/videos.html
+++ b/videos.html
@@ -47,6 +47,12 @@
       </div>
     </nav>
     <header>
+        <div id="videos-heading" class="container section">
+            <h1>Videos</h1>
+            <p>Below are a selection of performances by Verity-Belle, showcasing her versatility and passion for music across various styles and settings. Whether you're planning a concert, private event, wedding, or corporate function, Verity-Belle’s captivating voice and professional stage presence can make your event truly memorable.</p>
+            <p>If you’re interested in booking Verity-Belle or learning more about her availability, please don’t hesitate to get in touch.</p>
+            <button type="button" class="custom-button-outline">Enquire now</button>
+          </div>
 
     </header>
     <main>        
@@ -86,6 +92,9 @@
                     <p>Taken from a series of recordings perfomed at the Royal Welsh College of Music & Drama while Verity was completing her Masters there as a vocal scholar in January 2020.</p>
                     <p>Accompanied by Caradog Williams.</p>
                 </div>
+            </div>
+            <div class="row mb-3 text-center">
+                <p>More videos available on <a href="https://www.youtube.com/@veritybellesoprano">YouTube</a>.</p>
             </div>
         </div>
 
