--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <!-- Bootstrap Navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
       <div class="container-fluid ml-5">
-        <a class="navbar-brand" href="index.html"><h2>Verity-Belle Soprano</h2></a>
+        <a class="navbar-brand" href="index.html"><h2 style="color:white">Verity-Belle Soprano</h2></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,7 +47,7 @@
       </div>
     </nav>
     <header>
-      <div id="enquiries" class="container section">
+      <div id="enquiries-heading" class="container section">
         <h1>Enquiries</h1>
         <p>Whether you’re looking to book a live performance, schedule singing lessons, or arrange a vocal workshop, please use the form below to send me a message. I’ll respond as soon as possible.</p>
         <p>I offer private singing lessons from my home in Ewenny after school from Monday to Wednesday, with limited availability. Be sure to include your preferred time slots in your message.</p>
