Add success page for form and transition effect for social links

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
           <img src="assets/images/verity-10.webp" alt="Black and white portrait of Verity-Belle" class="img-fluid">
         </div>
         <div class="col-12 col-lg-6 col-xl-5"> 
-          <h1>Verity-Belle Atkinson</h1>
+          <h1>Welcome</h1>
           <p class="lead">Soprano Singer | Teacher | Music Practitioner</p>        
-          <p class="my-4">Verity-Belle is a classically trained soprano, vocal coach, and music practitioner based in the Vale of Glamorgan, performing and teaching throughout South Wales. She graduated from the Royal Welsh College of Music and Drama with First-Class Honours in her BMus degree and went on to complete her MMus in Music Performance with Distinction, also from the Royal Welsh College of Music and Drama, in 2021.</p>
+          <p class="my-4">Verity-Belle Atkinson is a classically trained soprano, vocal coach, and music practitioner based in the Vale of Glamorgan, performing and teaching throughout South Wales. She graduated from the Royal Welsh College of Music and Drama with First-Class Honours in her BMus degree and went on to complete her MMus in Music Performance with Distinction, also from the Royal Welsh College of Music and Drama, in 2021.</p>
               
         </div>
       </div>
@@ -154,7 +154,7 @@
     
   <footer id="footer" class="mt-auto">
     <div class="container section text-center">
-      <div id="socials" class="section socials">      
+      <div id="socials" class="section">      
         <a href="https://www.instagram.com/veritybellesoprano/" target="_blank"><i class="fa-brands fa-instagram"></i></a></i>
         <a href="https://www.facebook.com/veritybellesoprano/" target="_blank"><i class="fa-brands fa-facebook"></i></a></i>
         <a href="https://www.youtube.com/@veritybellesoprano" target="_blank"><i class="fa-brands fa-youtube"></i></a></i>      
