--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     </header>
     <main>
         <div class="container section">
-            <form>
+            <form action="success.html" method="get">
                 <div class="row">
                 <div class="col-12 col-md-6 mb-3">
                   <label for="topic" class="form-label">What is your enquiry regarding?</label>
