--- a/videos.html
+++ b/videos.html
@@ -51,7 +51,7 @@
             <h1>Videos</h1>
             <p>Below are a selection of performances by Verity-Belle, showcasing her versatility and passion for music across various styles and settings. Whether you're planning a concert, private event, wedding, or corporate function, Verity-Belle’s captivating voice and professional stage presence can make your event truly memorable.</p>
             <p>If you’re interested in booking Verity-Belle or learning more about her availability, please don’t hesitate to get in touch.</p>
-            <button type="button" class="custom-button-outline">Enquire now</button>
+            <a href="contact.html" class="btn custom-button-outline">Enquire now</a>
           </div>
 
     </header>
