--- a/index.html
+++ b/index.html
@@ -66,37 +66,38 @@
     <div id="services" class="container section">
       <h2>Services</h2>
       <div class="row justify-content-center">
-        <div class="col-12 col-md-4">
-          <div class="card" style="width: auto;">
+        <!--d-flex align-items-stretch classes to align card heights found on codepen.io https://codepen.io/Kerrys7777/pen/QWgwEeG -->
+        <div class="col-12 col-md-4 d-flex align-items-stretch">
+          <div class="card">
             <img src="assets/images/Teaching.jpg" class="card-img-top" alt="An image of a piano in a teaching room">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Singing Lessons</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <div class="d-flex justify-content-center"> 
+              <p class="card-text mb-4">1-2-1 private singing lessons taught from dedicated teaching space in Ewenny. For students of all ages.</p>
+              <div class="d-flex justify-content-center mt-auto"> 
                 <a class="btn custom-button-outline" href="contact.html">Enquire now</a>
               </div>    
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
-          <div class="card" style="width: auto;">
+        <div class="col-12 col-md-4 d-flex align-items-stretch">
+          <div class="card">
             <img src="assets/images/Workshop.jpg" class="card-img-top" alt="Verity-Belle teaching a workshop in front of a group of people">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Workshops</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <div class="d-flex justify-content-center"> 
+              <p class="card-text mb-4">Vocal workshops for groups of up to 30 people. Suitable for choirs or schools.</p>
+              <div class="d-flex justify-content-center mt-auto"> 
                 <a class="btn custom-button-outline" href="contact.html">Enquire now</a>
               </div>    
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
-          <div class="card" style="width: auto;">
+        <div class="col-12 col-md-4 d-flex align-items-stretch">
+          <div class="card">
             <img src="assets/images/Performance.jpg" class="card-img-top" alt="Verity-Belle performing in an Opera">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Performances</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <div class="d-flex justify-content-center"> 
+              <p class="card-text mb-4">Experienced operatic and musical theatre performer. Available for weddings, corporate functions and private events.</p>
+              <div class="d-flex justify-content-center mt-auto"> 
                 <a class="btn custom-button-outline" href="contact.html">Enquire now</a>
               </div>    
             </div>
