--- a/videos.html
+++ b/videos.html
@@ -12,8 +12,7 @@
 
     <!-- Bootstrap 5.3 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    </head>
-
+    
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -93,7 +92,7 @@
                     <p>Accompanied by Caradog Williams.</p>
                 </div>
             </div>
-            <div class="row mb-3 text-center">
+            <div class="row mb-3 text-center section">
                 <p>More videos available on <a href="https://www.youtube.com/@veritybellesoprano">YouTube</a>.</p>
             </div>
         </div>
