Fixed errors on videos.html picked up by w3 validator

--- a/videos.html
+++ b/videos.html
@@ -59,7 +59,7 @@
             <div class="row mb-3">
                 <div class="col-12 col-lg-6">
                     <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/8FrzPyVGjE0?si=LMNuPAyHOjHZjYEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/8FrzPyVGjE0?si=LMNuPAyHOjHZjYEw" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
@@ -71,7 +71,7 @@
             <div class="row mb-3">
                 <div class="col-12 col-lg-6">
                     <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/pc-ZAX4D1Yc?si=Mfs2ujw34h8NDrUw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/pc-ZAX4D1Yc?si=Mfs2ujw34h8NDrUw" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
@@ -83,7 +83,7 @@
             <div class="row mb-3">
                 <div class="col-12 col-lg-6">
                     <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/U9ehweh1Gbo?si=Y-_43DPBRty-r4w_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/U9ehweh1Gbo?si=Y-_43DPBRty-r4w_" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
@@ -101,9 +101,9 @@
     <footer id="footer" class="mt-auto">
         <div class="container section text-center">
           <div id="socials" class="section socials">      
-            <a href="https://www.instagram.com/veritybellesoprano/" target="_blank"><i class="fa-brands fa-instagram"></i></a></i>
-            <a href="https://www.facebook.com/veritybellesoprano/" target="_blank"><i class="fa-brands fa-facebook"></i></a></i>
-            <a href="https://www.youtube.com/@veritybellesoprano" target="_blank"><i class="fa-brands fa-youtube"></i></a></i>      
+            <a href="https://www.instagram.com/veritybellesoprano/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/veritybellesoprano/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.youtube.com/@veritybellesoprano" target="_blank"><i class="fa-brands fa-youtube"></i></a>     
           </div>  
           <div class="row">
             <div class="col-12 col-md-4">    
@@ -118,13 +118,11 @@
                 Ewenny<br>
                 CF35 5BL</p>              
             </div> 
-            </div>
           </div>
-          
-          <div class="section text-center">
-            <p>© Verity-Belle Soprano 2024</p>
-          </div>            
         </div>
+        <div class="section text-center">
+          <p>© Verity-Belle Soprano 2024</p>
+        </div>            
       </footer>
         
     <!-- Bootstrap JS -->
