Added testing section to README

--- a/success.html
+++ b/success.html
@@ -57,9 +57,9 @@
     <footer id="footer" class="mt-auto">
         <div class="container section text-center">
         <div id="socials" class="section socials">      
-            <a href="https://www.instagram.com/veritybellesoprano/" target="_blank"><i class="fa-brands fa-instagram"></i></a></i>
-            <a href="https://www.facebook.com/veritybellesoprano/" target="_blank"><i class="fa-brands fa-facebook"></i></a></i>
-            <a href="https://www.youtube.com/@veritybellesoprano" target="_blank"><i class="fa-brands fa-youtube"></i></a></i>      
+            <a href="https://www.instagram.com/veritybellesoprano/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/veritybellesoprano/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.youtube.com/@veritybellesoprano" target="_blank"><i class="fa-brands fa-youtube"></i></a>    
         </div>  
         <div class="row">
             <div class="col-12 col-md-4">    
@@ -74,11 +74,10 @@
                 Ewenny<br>
                 CF35 5BL</p>              
             </div> 
-            </div>
-        </div>      
-      <div class="section text-center">
-        <p>© Verity-Belle Soprano 2024</p>
-      </div>            
+          </div>
+      </div>      
+     <div class="section text-center">
+      <p>© Verity-Belle Soprano 2024</p>           
     </div>
   </footer>
     
