--- a/videos.html
+++ b/videos.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="row mb-3 text-center section">
-                <p>More videos available on <a href="https://www.youtube.com/@veritybellesoprano">YouTube</a>.</p>
+                <p>More videos available on <a href="https://www.youtube.com/@veritybellesoprano" target="_blank">YouTube</a>.</p>
             </div>
         </div>
 
