--- a/videos.html
+++ b/videos.html
@@ -46,56 +46,54 @@
       </div>
     </nav>
     <header>
-        <div id="videos-heading" class="container section">
-            <h1>Videos</h1>
-            <p>Below are a selection of performances by Verity-Belle, showcasing her versatility and passion for music across various styles and settings. Whether you're planning a concert, private event, wedding, or corporate function, Verity-Belle’s captivating voice and professional stage presence can make your event truly memorable.</p>
-            <p>If you’re interested in booking Verity-Belle or learning more about her availability, please don’t hesitate to get in touch.</p>
-            <a href="contact.html" class="btn custom-button-outline">Enquire now</a>
-          </div>
-
+      <div id="videos-heading" class="container section">
+        <h1>Videos</h1>
+        <p>Below are a selection of performances by Verity-Belle, showcasing her versatility and passion for music across various styles and settings. Whether you're planning a concert, private event, wedding, or corporate function, Verity-Belle’s captivating voice and professional stage presence can make your event truly memorable.</p>        <p>If you’re interested in booking Verity-Belle or learning more about her availability, please don’t hesitate to get in touch.</p>
+        <a href="contact.html" class="btn custom-button-outline">Enquire now</a>
+      </div>
     </header>
     <main>        
-        <div id="videos" class="container section">
-            <div class="row mb-3">
-                <div class="col-12 col-lg-6">
-                    <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/8FrzPyVGjE0?si=LMNuPAyHOjHZjYEw" allowfullscreen></iframe>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-6">
-                    <h2>Ouvres tes yeux bleus</h2>
-                    <p>This song was recorded as the first in a series of recordings at Cowbridge Holy Cross Church in July 2024. </p>
-                    <p>Accompanied by Amy Reynolds.</p>
-                </div>
+      <div id="videos" class="container section">
+        <div class="row mb-3">
+          <div class="col-12 col-lg-6">
+              <div class="ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/8FrzPyVGjE0?si=LMNuPAyHOjHZjYEw" allowfullscreen></iframe>
+              </div>
+          </div>
+          <div class="col-12 col-lg-6">
+              <h2>Ouvres tes yeux bleus</h2>
+              <p>This song was recorded as the first in a series of recordings at Cowbridge Holy Cross Church in July 2024. </p>
+              <p>Accompanied by Amy Reynolds.</p>
+          </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-12 col-lg-6">
+              <div class="ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/pc-ZAX4D1Yc?si=Mfs2ujw34h8NDrUw" allowfullscreen></iframe>
+              </div>
             </div>
-            <div class="row mb-3">
-                <div class="col-12 col-lg-6">
-                    <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/pc-ZAX4D1Yc?si=Mfs2ujw34h8NDrUw" allowfullscreen></iframe>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-6">
-                    <h2>Vanilla Ice Cream</h2>
-                    <p>This recording is taken from a peformance at St Illtud's Church, Llantwit Major, where Verity-Belle was invited to perform alongside Cowbridge Coral Society as part of their Summer Concert in July 2023.</p>
-                    <p>Accompanied by Carole Lloyd.</p>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-12 col-lg-6">
-                    <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/U9ehweh1Gbo?si=Y-_43DPBRty-r4w_" allowfullscreen></iframe>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-6">
-                    <h2>In uomini, in soldati</h2>
-                    <p>Taken from a series of recordings perfomed at the Royal Welsh College of Music & Drama while Verity was completing her Masters there as a vocal scholar in January 2020.</p>
-                    <p>Accompanied by Caradog Williams.</p>
-                </div>
-            </div>
-            <div class="row mb-3 text-center section">
-                <p>More videos available on <a href="https://www.youtube.com/@veritybellesoprano" target="_blank">YouTube</a>.</p>
+            <div class="col-12 col-lg-6">
+              <h2>Vanilla Ice Cream</h2>
+              <p>This recording is taken from a peformance at St Illtud's Church, Llantwit Major, where Verity-Belle was invited to perform alongside Cowbridge Coral Society as part of their Summer Concert in July 2023.</p>
+              <p>Accompanied by Carole Lloyd.</p>
             </div>
         </div>
+        <div class="row mb-3">
+            <div class="col-12 col-lg-6">
+              <div class="ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/U9ehweh1Gbo?si=Y-_43DPBRty-r4w_" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-12 col-lg-6">
+              <h2>In uomini, in soldati</h2>
+              <p>Taken from a series of recordings perfomed at the Royal Welsh College of Music & Drama while Verity was completing her Masters there as a vocal scholar in January 2020.</p>
+              <p>Accompanied by Caradog Williams.</p>
+            </div>
+        </div>
+        <div class="row mb-3 text-center section">
+            <p>More videos available on <a href="https://www.youtube.com/@veritybellesoprano" target="_blank">YouTube</a>.</p>
+        </div>
+      </div>
 
     </main>
     <footer id="footer" class="mt-auto">
