--- a/videos.html
+++ b/videos.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="index.html#about">About</a>
             </li>              
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="videos.html">Videos</a>
