Added mailto link and styling on email in footer

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <p><i class="fa-solid fa-phone"></i> 07805 176196</p>  
         </div>
         <div class="col-12 col-md-4">
-          <p><i class="fa-solid fa-envelope"></i> veritybellesoprano@gmail.com<br></p>
+          <p><i class="fa-solid fa-envelope"></i><a href="mailto:veritybellesoprano@gmail.com"> veritybellesoprano@gmail.com</a><br></p>
         </div> 
           
         <div class="col-12 col-md-4">
